doc/windows/VB6.0/32bit/multi_card/gts.bas

Public Declare Function GT_ArcXYZWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal interX As Double, ByVal interY As Double, ByVal interZ As Double, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYG0Override2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZG0Override2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_LnXYZAG0Override2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal a As Long, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYROverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcXYCOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZROverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcYZCOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXROverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_ArcZXCOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal z As Long, ByVal x As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYRZWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYCZWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZRXWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZCXWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXRYWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXCYWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYRZOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixXYCZOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal xCenter As Double, ByVal yCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZRXOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixYZCXOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal yCenter As Double, ByVal zCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXRYOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal radius As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_HelixZXCYOverride2WN Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal x As Long, ByVal y As Long, ByVal z As Long, ByVal zCenter As Double, ByVal xCenter As Double, ByVal radius As Integer, ByVal synVel As Double, ByVal synAcc As Double, Optional ByVal velEnd As Double = 0, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufTrend Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal trendSegNum As Long, ByVal trendDistance As Double, ByVal trendVelEnd As Double, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufIO Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal doType As Integer, ByVal doMask As Integer, ByVal doValue As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufEnableDoBitPulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal doType As Integer, ByVal doIndex As Integer, ByVal highLevelTime As Integer, ByVal lowLevelTime As Integer, ByVal pulseNum As Long, ByVal firstLevel As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufDisableDoBitPulse Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal doType As Integer, ByVal doIndex As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufDelay Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal delayTime As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufDA Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal chn As Integer, ByVal daValue As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufLmtsOn Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal axis As Integer, ByVal limitType As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufLmtsOff Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal axis As Integer, ByVal limitType As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufSetStopIo Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal axis As Integer, ByVal stopType As Integer, ByVal inputType As Integer, ByVal inputIndex As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufMove Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal moveAxis As Integer, ByVal pos As Long, ByVal vel As Double, ByVal acc As Double, ByVal modal As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufGear Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal gearAxis As Integer, ByVal pos As Long, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_BufGearPercent Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, ByVal gearAxis As Integer, ByVal pos As Long, ByVal accPercent As Integer, ByVal decPercent As Integer, Optional ByVal fifo As Integer = 0)
Public Declare Function GT_BufStopMotion Lib "gts.dll" (ByVal cardNum As Integer,ByVal crd As Integer, Optional ByVal fifo As Integer = 0)
